added new parser in haskell and new gui upgrades, it works finally